--- a/text.css
+++ b/text.css
@@ -1,7 +1,7 @@
 .text_1 {
 	position: absolute;
-	left: 16%;
-	top: 11%;
+	left: 320px;
+	top: 110px;
 	font-size: 30px;
 	color: rgba(100, 102, 102, 0.8);
 	/* old: 244, 243, 241 */
