--- a/style.css
+++ b/style.css
@@ -508,13 +508,13 @@ ul li.playing {
 	opacity: 0;
 	/*实先规定文字的状态是不显示的*/
 
-	animation: fade-in 6s ease 0s 1;
+	animation: fade-in 6s ease 3s 1;
 	/*调用名称为fade-in的动画，全程动画显示时间4S，进入方式为ease，延时0S进入，播放次数1次*/
 
-	-webkit-animation: fade-in 6s ease 0s 1;
-	-moz-animation: fade-in 6s ease 0s 1;
-	-o-animation: fade-in 6s ease 0s 1;
-	-ms-animation: fade-in 6s ease 0s 1;
+	-webkit-animation: fade-in 6s ease 3s 1;
+	-moz-animation: fade-in 6s ease 3s 1;
+	-o-animation: fade-in 6s ease 3s 1;
+	-ms-animation: fade-in 6s ease 3s 1;
 	
 	/*规定动画的最后状态为结束状态*/
 	animation-fill-mode:forwards;
@@ -575,6 +575,32 @@ ul li.playing {
 	left: calc(50% + 240px);
 
 }
+
+
+
+/* 加载动画 */
+.bg{
+	background: url('resource/loading.png') no-repeat center center/cover;
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 10;
+	filter: blur(0px);
+	user-select: none;
+}
+
+.text{
+	z-index: 11;
+	font-size: 60px;
+ 	position: fixed;
+	color: rgba(100, 102, 102, 0.8);
+	left: calc(50% - 30px);
+	top: calc(50% - 60px);
+	user-select: none;
+}
+
 
 
 
