--- a/text.css
+++ b/text.css
@@ -1,20 +1,12 @@
 .text_1 {
 	position: absolute;
-	left: 320px;
-	top: 110px;
 	font-size: 30px;
 	color: rgba(100, 102, 102, 0.8);
+	margin: 10px 18px
 	/* old: 244, 243, 241 */
-	cursor: url("resource/text.png"), auto;
 }
 
-.text_2 {
-	position: absolute;
-	left: 320px;
-	top: 810px;
-	font-size: 30px;
-	color: rgba(100, 102, 102, 0.8);
-}
+
 
 .text_3 {
 	position: fixed;
@@ -23,6 +15,9 @@
 	font-size: 10px;
 	user-select: none;
 	color: rgba(100, 102, 102, 0.8);
+}
+.text_3-o {
+	opacity: 0;
 }
 
 /* 页脚文本 */
@@ -51,4 +46,3 @@
 	color: rgba(100, 102, 102, 0.8);
 	opacity: 0.8;
 }
-
