--- a/style.css
+++ b/style.css
@@ -708,7 +708,7 @@ ul li.playing {
 	user-select: none;
 }
 
-.text{
+.text {
 	font-family: 微软雅黑;
 	z-index: 11;
 	font-size: 60px;
@@ -716,7 +716,7 @@ ul li.playing {
 	color: rgba(100, 102, 102, 0.8);
 	left: calc(50% - 30px);
 	top: calc(50% - 60px);
-
+	user-select: none;
 }
 
 /* 弹出动画 */
