--- a/style.css
+++ b/style.css
@@ -153,7 +153,6 @@ br {
 	-webkit-backdrop-filter: blur(0px);
 	border: 1px solid rgba(255, 255, 255, 0.18);
 	user-select: none;
-	z-index: 5;
 }
 
 .shell-show {
@@ -270,8 +269,6 @@ br {
 	-webkit-box-shadow: rgba(142, 142, 142, 0.19) 0px 6px 15px 0px;
 	border-radius: 15px;
 	-webkit-border-radius: 15px;
-
-	z-index: 5;
 }
 
 .wrapper i {
@@ -652,10 +649,10 @@ ul li.playing {
 /* 页脚   有点点bug*/
 .foot_1 {
 	position: absolute;
-	left: 300px;
 	top: 2100px;
-	width: 1400px;
+	width: 100%;
 	height: 180px;
+	text-align: center;
 }
 
 .foot-o {
@@ -665,33 +662,35 @@ ul li.playing {
 .foot_2 {
 	position: absolute;
 	top: 35px;
-	left: calc(50% - 290px);
-	z-index: 5;
+	left: calc(50% - 24px - 16%);
 }
 
 .foot_3 {
 	position: absolute;
 	top: 35px;
-	left: calc(50% - 110px);
-	z-index: 5;
+	left: calc(50% - 24px - 8%);
 }
 
 .foot_4 {
 	position: absolute;
 	top: 35px;
-	left: calc(50% + 60px);
-	z-index: 5;
+	left: calc(50% - 24px);
 }
 
 .foot_5 {
 	position: absolute;
 	top: 35px;
-	left: calc(50% + 240px);
-	z-index: 5;
+	left: calc(50% - 24px + 8%);
 }
+
+.foot_7 {
+	position: absolute;
+	top: 35px;
+	left: calc(50% - 24px + 16%);
+}
+
 .foot_6 {
 	position: absolute;
-	z-index: 5;
 }
 
 
@@ -703,14 +702,12 @@ ul li.playing {
 	left: 0px;
 	width: 100%;
 	height: 100%;
-	z-index: 10;
 	filter: blur(0px);
 	user-select: none;
 }
 
 .text {
 	font-family: 微软雅黑;
-	z-index: 11;
 	font-size: 60px;
  	position: fixed;
 	color: rgba(100, 102, 102, 0.8);
@@ -737,10 +734,6 @@ ul li.playing {
 	-ms-transform: scale(1);
 	transform: scale(1);
 	opacity: 1;
-}
-
-.backgroundz {
-	z-index: 3;
 }
 
 .in {
